--- a/UgAppInAppDemo/Sources/UgAppInAppDemo/main.page
+++ b/UgAppInAppDemo/Sources/UgAppInAppDemo/main.page
@@ -1,25 +1,24 @@
 <?xml  version="1.0" encoding="UTF-8" standalone="no"?>
-<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
+<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmi:id="0.3" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
   <widgets:Page name="main">
-    <minArea xsi:type="graphics:Dimension" width="414" height="896"/>
-    <location xsi:type="graphics:Point"/>
-    <backgroundColor xsi:type="graphics:RGB" Red="248" Green="248" Blue="248"/>
+    <minArea width="414" height="896"/>
+    <location/>
+    <backgroundColor Red="248" Green="248" Blue="248"/>
     <children xsi:type="widgets:Label" text="Label1" name="lblTemperature" horizontalAlignment="CENTER">
-      <font xsi:type="graphics:Font" fontFamily="ArialMT" size="46">
-        <color xsi:type="graphics:RGB" Green="143" Blue="81"/>
+      <font fontFamily="ArialMT" size="46">
+        <color Green="143" Blue="81"/>
       </font>
       <layoutData xsi:type="layout:AutoLayoutData">
-        <constraints xsi:type="layout:Constraint" sourceAnchor="CENTER_X" targetAnchor="CENTER_X" source="/0/@children.0" target="/0"/>
-        <constraints xsi:type="layout:Constraint" sourceAnchor="CENTER_Y" targetAnchor="CENTER_Y" source="/0/@children.0" target="/0"/>
+        <constraints sourceAnchor="CENTER_X" targetAnchor="CENTER_X" source="/0/@children.0" target="/0"/>
+        <constraints sourceAnchor="CENTER_Y" targetAnchor="CENTER_Y" source="/0/@children.0" target="/0"/>
       </layoutData>
-      <location xsi:type="graphics:Point" x="138" y="422"/>
-      <size xsi:type="graphics:Dimension" width="139" height="52"/>
-      <contentSize xsi:type="graphics:Dimension" width="139" height="52"/>
+      <location x="138" y="422"/>
+      <size width="139" height="52"/>
+      <contentSize width="139" height="52"/>
     </children>
     <layout xsi:type="layout:AutoLayout"/>
-    <maxArea xsi:type="graphics:Dimension" width="414" height="896"/>
-    <size xsi:type="graphics:Dimension" width="414" height="896"/>
+    <maxArea width="414" height="896"/>
+    <size width="414" height="896"/>
   </widgets:Page>
-  <binding:BindingModel/>
   <navigation:Navigation page="/0"/>
 </xmi:XMI>
