--- a/UgGestureDemo/Sources/UgGestureDemo/main.page
+++ b/UgGestureDemo/Sources/UgGestureDemo/main.page
@@ -1,59 +1,52 @@
 <?xml  version="1.0" encoding="UTF-8" standalone="no"?>
-<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
+<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmi:id="0.3" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
   <widgets:Page backgroundImage="Assets/image1.png" name="main">
     <children xsi:type="widgets:Label" text="My gesture" name="label1" wrapText="true" horizontalAlignment="CENTER">
-      <location xsi:type="graphics:Point" x="50" y="50"/>
-      <size xsi:type="graphics:Dimension" width="314" height="738"/>
-      <contentSize xsi:type="graphics:Dimension" width="134" height="30"/>
+      <font fontFamily="ArialMT" size="17">
+        <color/>
+      </font>
       <layoutData xsi:type="layout:GridData" row="1" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true" widthConstraint="MATCH_PARENT">
-        <minSize xsi:type="graphics:Dimension"/>
-        <maxSize xsi:type="graphics:Dimension" width="314" height="738"/>
+        <minSize/>
+        <maxSize width="314" height="738"/>
       </layoutData>
+      <location x="50" y="114"/>
+      <size width="314" height="654"/>
+      <contentSize width="85" height="19"/>
     </children>
     <children xsi:type="widgets:CustomWidget" name="customwidget1">
-      <location xsi:type="graphics:Point" x="50" y="20"/>
-      <size xsi:type="graphics:Dimension" width="314" height="30"/>
+      <location x="50" y="20"/>
+      <size width="314" height="94"/>
       <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
-        <minSize xsi:type="graphics:Dimension" width="30" height="30"/>
-        <maxSize xsi:type="graphics:Dimension" width="314" height="30"/>
+        <minSize width="30" height="94"/>
+        <maxSize width="314" height="30"/>
       </layoutData>
     </children>
     <children xsi:type="widgets:CustomWidget" name="customwidget2">
-      <location xsi:type="graphics:Point" x="192" y="846"/>
-      <size xsi:type="graphics:Dimension" width="30" height="30"/>
+      <location x="178" y="826"/>
+      <size width="58" height="50"/>
       <layoutData xsi:type="layout:GridData" row="3" horizontalAlignment="CENTER" verticalAlignment="MIDDLE">
-        <minSize xsi:type="graphics:Dimension" width="30" height="30"/>
-        <maxSize xsi:type="graphics:Dimension" width="30" height="30"/>
+        <minSize width="58" height="50"/>
+        <maxSize width="30" height="30"/>
       </layoutData>
     </children>
     <children xsi:type="widgets:Button" text="MyButton" name="button1" horizontalAlignment="CENTER">
-      <font xsi:type="graphics:Font" fontFamily="ArialMT" size="17">
-        <color xsi:type="graphics:RGB" Red="254" Green="255" Blue="255"/>
+      <font fontFamily="ArialMT" size="17">
+        <color Red="254" Green="255" Blue="255"/>
       </font>
-      <location xsi:type="graphics:Point" x="50" y="788"/>
-      <size xsi:type="graphics:Dimension" width="314" height="58"/>
-      <contentSize xsi:type="graphics:Dimension" width="72" height="58"/>
+      <location x="50" y="768"/>
+      <size width="314" height="58"/>
+      <contentSize width="72" height="58"/>
       <layoutData xsi:type="layout:GridData" row="2" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
-        <minSize xsi:type="graphics:Dimension" width="-101" height="58"/>
-        <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+        <minSize width="-101" height="58"/>
+        <maxSize width="-1" height="-1"/>
       </layoutData>
-      <backgroundColor xsi:type="graphics:RGB" Red="18" Green="86" Blue="6"/>
+      <backgroundColor Red="18" Green="86" Blue="6"/>
     </children>
     <layout xsi:type="layout:GridLayout" rows="4" marginTop="20" marginBottom="20" marginLeft="50" marginRight="50"/>
-    <maxArea xsi:type="graphics:Dimension" width="414" height="896"/>
-    <location xsi:type="graphics:Point"/>
-    <minArea xsi:type="graphics:Dimension" width="414" height="896"/>
-    <size xsi:type="graphics:Dimension" width="414" height="896"/>
+    <maxArea width="414" height="896"/>
+    <location/>
+    <minArea width="414" height="896"/>
+    <size width="414" height="896"/>
   </widgets:Page>
-  <binding:BindingModel>
-    <bindings xsi:type="binding:Binding" active="true" src="/0" dst="/0/@children.0">
-      <root xsi:type="binding:BindingSyncPoint">
-        <srcSelector xsi:type="binding:BindingSelector" feature="adapter">
-          <next xsi:type="binding:BindingSelector" feature="label"/>
-        </srcSelector>
-        <dstSelector xsi:type="binding:BindingSelector" feature="text"/>
-      </root>
-    </bindings>
-  </binding:BindingModel>
   <navigation:Navigation page="/0"/>
 </xmi:XMI>
