--- a/UgWebViewControl/Sources/UgWebViewControl/main.page
+++ b/UgWebViewControl/Sources/UgWebViewControl/main.page
@@ -1,5 +1,5 @@
 <?xml  version="1.0" encoding="UTF-8" standalone="no"?>
-<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:native="http://scade.com/sdk/view/widgets/native" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
+<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmi:id="0.3" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:native="http://scade.com/sdk/view/widgets/native" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
   <widgets:Page name="main">
     <minArea width="414" height="736"/>
     <location/>
@@ -7,12 +7,7 @@
     <children xsi:type="native:WebView" name="webView">
       <location/>
       <size width="414" height="636"/>
-      <layoutData xsi:type="layout:AutoLayoutData">
-        <constraints sourceAnchor="TOP" targetAnchor="TOP" source="/0/@children.0" target="/0"/>
-        <constraints source="/0/@children.0" target="/0"/>
-        <constraints sourceAnchor="RIGHT" targetAnchor="RIGHT" source="/0/@children.0" target="/0"/>
-        <constraints sourceAnchor="BOTTOM" targetAnchor="BOTTOM" constant="-100" source="/0/@children.0" target="/0"/>
-      </layoutData>
+      <layoutData xsi:type="layout:AutoLayoutData"/>
     </children>
     <children xsi:type="widgets:Button" text="Apple Swift Page" name="button" horizontalAlignment="CENTER">
       <font fontFamily="ArialMT" size="17">
@@ -47,6 +42,5 @@
     <maxArea width="414" height="736"/>
     <size width="414" height="736"/>
   </widgets:Page>
-  <binding:BindingModel/>
   <navigation:Navigation page="/0"/>
 </xmi:XMI>
