--- a/UgSwiftFoundationDemo2/Sources/UgSwiftFoundationDemo2/main.page
+++ b/UgSwiftFoundationDemo2/Sources/UgSwiftFoundationDemo2/main.page
@@ -1,148 +1,147 @@
 <?xml  version="1.0" encoding="UTF-8" standalone="no"?>
-<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgetlayouts="http://scade.com/sdk/view/widgets/layout" xmlns:widgets="http://scade.com/sdk/view/widgets">
+<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmi:id="0.3" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgetlayouts="http://scade.com/sdk/view/widgets/layout" xmlns:widgets="http://scade.com/sdk/view/widgets">
   <widgets:Page name="main">
-    <minArea xsi:type="graphics:Dimension" width="428" height="926"/>
-    <location xsi:type="graphics:Point"/>
-    <backgroundColor xsi:type="graphics:RGB" Red="248" Green="248" Blue="248"/>
+    <minArea width="428" height="926"/>
+    <location/>
+    <backgroundColor Red="248" Green="248" Blue="248"/>
     <children xsi:type="widgets:List" name="list1">
-      <template xsi:type="widgets:ListTemplate" name="template">
-        <element xsi:type="widgets:ListElement" name="listElement">
+      <template name="template">
+        <element name="listElement">
           <children xsi:type="widgets:GridView" name="gridView1">
             <children xsi:type="widgets:RowView" name="rowView1">
               <children xsi:type="widgets:Label" text="label" name="label2">
-                <font xsi:type="graphics:Font" fontFamily="ArialMT" size="15">
-                  <color xsi:type="graphics:RGB" Red="70" Green="70" Blue="70"/>
+                <font fontFamily="ArialMT" size="15">
+                  <color Red="70" Green="70" Blue="70"/>
                 </font>
                 <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true">
-                  <minSize xsi:type="graphics:Dimension" width="44" height="22"/>
-                  <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+                  <minSize width="44" height="22"/>
+                  <maxSize width="-1" height="-1"/>
                 </layoutData>
-                <location xsi:type="graphics:Point" x="5" y="5"/>
-                <size xsi:type="graphics:Dimension" width="44" height="25"/>
-                <contentSize xsi:type="graphics:Dimension" width="44" height="22"/>
+                <location x="5" y="5"/>
+                <size width="44" height="25"/>
+                <contentSize width="44" height="22"/>
               </children>
               <children xsi:type="widgets:Label" text="label" name="label3">
-                <font xsi:type="graphics:Font" fontFamily="ArialMT" size="15">
-                  <color xsi:type="graphics:RGB" Red="70" Green="70" Blue="70"/>
+                <font fontFamily="ArialMT" size="15">
+                  <color Red="70" Green="70" Blue="70"/>
                 </font>
                 <layoutData xsi:type="layout:GridData" column="1" horizontalAlignment="RIGHT" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true">
-                  <minSize xsi:type="graphics:Dimension" width="44" height="22"/>
-                  <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+                  <minSize width="44" height="22"/>
+                  <maxSize width="-1" height="-1"/>
                 </layoutData>
-                <location xsi:type="graphics:Point" x="155" y="5"/>
-                <size xsi:type="graphics:Dimension" width="44" height="25"/>
-                <contentSize xsi:type="graphics:Dimension" width="44" height="22"/>
+                <location x="155" y="5"/>
+                <size width="44" height="25"/>
+                <contentSize width="44" height="22"/>
               </children>
               <layout xsi:type="layout:GridLayout" columns="2" marginRight="5" marginTop="5" marginBottom="5" marginLeft="5"/>
-              <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-              <location xsi:type="graphics:Point" x="5" y="5"/>
-              <minArea xsi:type="graphics:Dimension"/>
-              <size xsi:type="graphics:Dimension" width="204" height="35"/>
+              <maxArea width="-1" height="-1"/>
+              <location x="5" y="5"/>
+              <minArea/>
+              <size width="204" height="35"/>
               <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true">
-                <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+                <maxSize width="-1" height="-1"/>
               </layoutData>
             </children>
             <children xsi:type="widgets:RowView" name="rowView2">
               <children xsi:type="widgets:Label" text="Passed" name="label4" horizontalAlignment="CENTER">
-                <font xsi:type="graphics:Font" fontFamily="ArialMT" size="15">
-                  <color xsi:type="graphics:RGB"/>
+                <font fontFamily="ArialMT" size="15">
+                  <color/>
                 </font>
-                <location xsi:type="graphics:Point" x="19" y="5"/>
-                <size xsi:type="graphics:Dimension" width="68" height="25"/>
-                <contentSize xsi:type="graphics:Dimension" width="68" height="22"/>
+                <location x="19" y="5"/>
+                <size width="68" height="25"/>
+                <contentSize width="68" height="22"/>
                 <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true">
-                  <minSize xsi:type="graphics:Dimension" width="68" height="22"/>
-                  <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+                  <minSize width="68" height="22"/>
+                  <maxSize width="-1" height="-1"/>
                 </layoutData>
-                <backgroundColor xsi:type="graphics:RGB" Red="40" Green="182" Blue="55"/>
+                <backgroundColor Red="40" Green="182" Blue="55"/>
               </children>
               <children xsi:type="widgets:Label" text="Failed" name="label5" horizontalAlignment="CENTER">
-                <font xsi:type="graphics:Font" fontFamily="ArialMT" size="15">
-                  <color xsi:type="graphics:RGB"/>
+                <font fontFamily="ArialMT" size="15">
+                  <color/>
                 </font>
-                <location xsi:type="graphics:Point" x="122" y="5"/>
-                <size xsi:type="graphics:Dimension" width="57" height="25"/>
-                <contentSize xsi:type="graphics:Dimension" width="57" height="22"/>
+                <location x="122" y="5"/>
+                <size width="57" height="25"/>
+                <contentSize width="57" height="22"/>
                 <layoutData xsi:type="layout:GridData" column="1" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true">
-                  <minSize xsi:type="graphics:Dimension" width="57" height="22"/>
-                  <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+                  <minSize width="57" height="22"/>
+                  <maxSize width="-1" height="-1"/>
                 </layoutData>
-                <backgroundColor xsi:type="graphics:RGB" Red="169" Green="26" Blue="17"/>
+                <backgroundColor Red="169" Green="26" Blue="17"/>
               </children>
               <layout xsi:type="layout:GridLayout" columns="2" marginRight="5" marginTop="5" marginBottom="5" marginLeft="5"/>
-              <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-              <location xsi:type="graphics:Point" x="209" y="5"/>
-              <minArea xsi:type="graphics:Dimension"/>
-              <size xsi:type="graphics:Dimension" width="204" height="35"/>
+              <maxArea width="-1" height="-1"/>
+              <location x="209" y="5"/>
+              <minArea/>
+              <size width="204" height="35"/>
               <layoutData xsi:type="layout:GridData" column="1" horizontalAlignment="RIGHT" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true">
-                <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+                <maxSize width="-1" height="-1"/>
               </layoutData>
             </children>
             <layout xsi:type="layout:GridLayout" columns="2" marginRight="5" marginTop="5" marginBottom="5" marginLeft="5"/>
-            <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-            <location xsi:type="graphics:Point" x="10"/>
-            <minArea xsi:type="graphics:Dimension"/>
-            <size xsi:type="graphics:Dimension" width="418" height="45"/>
+            <maxArea width="-1" height="-1"/>
+            <location x="10"/>
+            <minArea/>
+            <size width="418" height="45"/>
             <layoutData xsi:type="layout:GridData" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" heightConstraint="MATCH_PARENT">
-              <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+              <maxSize width="-1" height="-1"/>
             </layoutData>
           </children>
           <layout xsi:type="layout:GridLayout" marginLeft="10"/>
-          <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-          <location xsi:type="graphics:Point"/>
-          <minArea xsi:type="graphics:Dimension" height="45"/>
-          <size xsi:type="graphics:Dimension" width="428" height="45"/>
+          <maxArea width="-1" height="-1"/>
+          <location/>
+          <minArea height="45"/>
+          <size width="428" height="45"/>
           <layoutData xsi:type="layout:GridData" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT" heightConstraint="MATCH_PARENT">
-            <minSize xsi:type="graphics:Dimension"/>
+            <minSize/>
           </layoutData>
         </element>
-        <location xsi:type="graphics:Point"/>
-        <size xsi:type="graphics:Dimension"/>
+        <location/>
+        <size/>
       </template>
-      <size xsi:type="graphics:Dimension" width="428" height="816"/>
+      <size width="428" height="816"/>
       <layout xsi:type="widgetlayouts:ListLayout"/>
-      <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-      <location xsi:type="graphics:Point" y="50"/>
-      <minArea xsi:type="graphics:Dimension"/>
+      <maxArea width="-1" height="-1"/>
+      <location y="50"/>
+      <minArea/>
       <layoutData xsi:type="layout:AutoLayoutData">
-        <constraints xsi:type="layout:Constraint" sourceAnchor="TOP" targetAnchor="TOP" constant="50" source="/0/@children.0" target="/0"/>
-        <constraints xsi:type="layout:Constraint" source="/0/@children.0" target="/0"/>
-        <constraints xsi:type="layout:Constraint" sourceAnchor="RIGHT" targetAnchor="RIGHT" source="/0/@children.0" target="/0"/>
-        <constraints xsi:type="layout:Constraint" sourceAnchor="BOTTOM" targetAnchor="BOTTOM" constant="-60" source="/0/@children.0" target="/0"/>
+        <constraints sourceAnchor="TOP" targetAnchor="TOP" constant="50" source="/0/@children.0" target="/0"/>
+        <constraints source="/0/@children.0" target="/0"/>
+        <constraints sourceAnchor="RIGHT" targetAnchor="RIGHT" source="/0/@children.0" target="/0"/>
+        <constraints sourceAnchor="BOTTOM" targetAnchor="BOTTOM" constant="-60" source="/0/@children.0" target="/0"/>
       </layoutData>
     </children>
     <children xsi:type="widgets:Label" text="Swift Foundation 4.0 on Android and iOS" name="label1" horizontalAlignment="CENTER">
-      <font xsi:type="graphics:Font" fontFamily="ArialMT" size="17">
-        <color xsi:type="graphics:RGB" Red="70" Green="70" Blue="70"/>
+      <font fontFamily="ArialMT" size="17">
+        <color Red="70" Green="70" Blue="70"/>
       </font>
       <layoutData xsi:type="layout:AutoLayoutData">
-        <constraints xsi:type="layout:Constraint" sourceAnchor="TOP" targetAnchor="TOP" constant="5" source="/0/@children.1" target="/0"/>
-        <constraints xsi:type="layout:Constraint" constant="20" source="/0/@children.1" target="/0"/>
-        <constraints xsi:type="layout:Constraint" sourceAnchor="RIGHT" targetAnchor="RIGHT" constant="-20" source="/0/@children.1" target="/0"/>
+        <constraints sourceAnchor="TOP" targetAnchor="TOP" constant="5" source="/0/@children.1" target="/0"/>
+        <constraints constant="20" source="/0/@children.1" target="/0"/>
+        <constraints sourceAnchor="RIGHT" targetAnchor="RIGHT" constant="-20" source="/0/@children.1" target="/0"/>
       </layoutData>
-      <location xsi:type="graphics:Point" x="20" y="5"/>
-      <size xsi:type="graphics:Dimension" width="388" height="22"/>
-      <contentSize xsi:type="graphics:Dimension" width="308" height="19"/>
+      <location x="20" y="5"/>
+      <size width="388" height="22"/>
+      <contentSize width="308" height="19"/>
     </children>
     <children xsi:type="widgets:Button" text="Run TestFoundation tests" name="button1" horizontalAlignment="CENTER" cornerRadius="15">
-      <font xsi:type="graphics:Font" fontFamily="ArialMT" size="17">
-        <color xsi:type="graphics:RGB"/>
+      <font fontFamily="ArialMT" size="17">
+        <color/>
       </font>
-      <location xsi:type="graphics:Point" x="50" y="871"/>
-      <size xsi:type="graphics:Dimension" width="328" height="50"/>
-      <contentSize xsi:type="graphics:Dimension" width="193" height="19"/>
+      <location x="50" y="871"/>
+      <size width="328" height="50"/>
+      <contentSize width="193" height="19"/>
       <layoutData xsi:type="layout:AutoLayoutData">
-        <constraints xsi:type="layout:Constraint" sourceAnchor="TOP" targetAnchor="BOTTOM" constant="5" source="/0/@children.2" target="/0/@children.0"/>
-        <constraints xsi:type="layout:Constraint" constant="50" source="/0/@children.2" target="/0"/>
-        <constraints xsi:type="layout:Constraint" sourceAnchor="RIGHT" targetAnchor="RIGHT" constant="-50" source="/0/@children.2" target="/0"/>
-        <constraints xsi:type="layout:Constraint" sourceAnchor="BOTTOM" targetAnchor="BOTTOM" constant="-5" source="/0/@children.2" target="/0"/>
+        <constraints sourceAnchor="TOP" targetAnchor="BOTTOM" constant="5" source="/0/@children.2" target="/0/@children.0"/>
+        <constraints constant="50" source="/0/@children.2" target="/0"/>
+        <constraints sourceAnchor="RIGHT" targetAnchor="RIGHT" constant="-50" source="/0/@children.2" target="/0"/>
+        <constraints sourceAnchor="BOTTOM" targetAnchor="BOTTOM" constant="-5" source="/0/@children.2" target="/0"/>
       </layoutData>
-      <backgroundColor xsi:type="graphics:RGB" Red="84" Green="255" Blue="129"/>
+      <backgroundColor Red="84" Green="255" Blue="129"/>
     </children>
     <layout xsi:type="layout:AutoLayout"/>
-    <maxArea xsi:type="graphics:Dimension" width="428" height="926"/>
-    <size xsi:type="graphics:Dimension" width="428" height="926"/>
+    <maxArea width="428" height="926"/>
+    <size width="428" height="926"/>
   </widgets:Page>
-  <binding:BindingModel/>
   <navigation:Navigation page="/0"/>
 </xmi:XMI>
